hphp/hack/test/typecheck/named_parameters/named_params_default_check.php.exp
ERROR: File "named_params_default_check.php", line 10, characters 47-49:
A previous parameter has a default value.
Remove all the default values for the preceding parameters,
or add a default value to this one. (Typing[4077])
ERROR: File "named_params_default_check.php", line 13, characters 51-53:
A previous parameter has a default value.
Remove all the default values for the preceding parameters,
or add a default value to this one. (Typing[4077])
